==> randyb128/SeaData2000/Lib/DS2482/DS2482.cpp <==
#include "DS2482.h"
#include <Wire.h>

bool DS2482::DS2482_reset()
{
   uint8_t status;
#if 0
  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_DRST );
  Wire.endTransmission( );
  Wire.requestFrom( (int)I2Cadr, (int)1 );
  status = Wire.read( );
#endif
	status = owcmd( CMD_DRST );
	return ((status & 0xF7) == 0x10);
}

bool DS2482::DS2482_write_config(uint8_t config)
{
	uint8_t read_config;
#if 0
  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_WCFG );
  Wire.write( config | ( ~config << 4 ) );
  Wire.endTransmission( );
  Wire.requestFrom( I2Cadr, 1 );
  read_config = Wire.read( );
#endif
	read_config = owcmd( CMD_WCFG, ( config | ( ~config<<4 ) ) );
   // check for failure due to incorrect read back
//   #ifdef 
     Serial.print( " * configReadBack (BIN): " );
     Serial.println( read_config, BIN );
//   #endif

   if(config != read_config )
   {
      // handle error
      // ...
      DS2482_reset();

      return false;
   }

   return true;
}

bool DS2482::OWReset( )
{
   uint8_t status;
#if 0
   int poll_count = 0;

  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_1WRS );
  Wire.endTransmission( );
  Wire.requestFrom( I2Cadr, 1 );
  status = Wire.read( );
  do {
    Wire.requestFrom( I2Cadr, 1 );
//    status = Wire.read( ) & 1<<(ST_1WB);
    status = Wire.read( );                //keep all bits for further tests
  } while( (status & 1<<(ST_1WB)) && (poll_count++ < POLL_LIMIT) );
  #ifdef DEBUG
    Serial.print( " * status " );
    Serial.println( status, HEX );
    Serial.print( " * poll_count " );
    Serial.println( poll_count, DEC );
  #endif
   // check for failure due to poll limit reached
   if (poll_count >= POLL_LIMIT)
   {
      // handle error
      // ...
      DS2482_reset();
      return false;
   }
#endif
	status = owcmdw( CMD_1WRS );

   // check for short condition
   if (status & (1<<ST_SD))
      short_detected = true;
   else
      short_detected = false;

   // check for presence detect
   if (status & (1<<ST_PPD))
      return true;
   else
      return false;
}

uint8_t DS2482::OWTouchBit(uint8_t sendbit)
{
   uint8_t status;
   int poll_count = 0;
#if 0
  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_1WSB );
  Wire.write( sendbit ? 0x80 : 0x00 );
  Wire.endTransmission( );
  Wire.requestFrom( I2Cadr, 1 );
  status = Wire.read( );
  do {
    Wire.requestFrom( I2Cadr, 1 );
    status = Wire.read( );
  } while( (status & 1<<(ST_1WB)) && (poll_count++ < POLL_LIMIT) );

   // check for failure due to poll limit reached
   if (poll_count >= POLL_LIMIT)
   {
      // handle error
      // ...
      DS2482_reset();
      return 0;
   }
#endif
	status = owcmdw( CMD_1WSB, (sendbit ? 0x80 : 0x00) );
   // return bit state
   if (status & 1<<(ST_SBR))
      return 1;
   else
      return 0;
}

void DS2482::OWWriteByte(uint8_t sendbyte)
{
#if 0
   uint8_t status;
   int poll_count = 0;

   // loop checking 1WB bit for completion of 1-Wire operation
   // abort if poll limit reached
  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_1WWB );
  Wire.write( sendbyte );
  Wire.endTransmission( );
  Wire.requestFrom( (int)I2Cadr, 1 );
  status = Wire.read( );
  do {
    Wire.requestFrom( I2Cadr, 1 );
    status = Wire.read( );
  } while( (status & 1<<(ST_1WB)) && (poll_count++ < POLL_LIMIT) );
  
   // check for failure due to poll limit reached
   if (poll_count >= POLL_LIMIT)
   {
      // handle error
      // ...
      DS2482_reset();
   }
#endif
	owcmdw( CMD_1WWB, sendbyte );
}

uint8_t DS2482::OWReadByte(void)
{
#if 0
   uint8_t data, status;
   int poll_count = 0;

  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_1WRB );
  Wire.endTransmission( );
  Wire.requestFrom( I2Cadr, 1 );
  status = Wire.read( );
  do {
    Wire.requestFrom( I2Cadr, 1 );
    status = Wire.read( );
  } while( (status & 1<<(ST_1WB)) && (poll_count++ < POLL_LIMIT) );

   // check for failure due to poll limit reached
   if (poll_count >= POLL_LIMIT)
   {
      // handle error
      // ...
      DS2482_reset();
      return 0;
   }

  Wire.beginTransmission( I2Cadr );
  Wire.write( CMD_SRP );
  Wire.write( DATAREG );
  Wire.endTransmission( );
  Wire.requestFrom( I2Cadr, 1 );
  data = Wire.read( );
  
   return data;
#endif
	owcmdw( CMD_1WRB );
	return( owcmd( CMD_SRP, DATAREG ) );
}

bool DS2482::OWSearch()
{
   int id_bit_number;
   int last_zero, rom_byte_number;
   int  cmp_id_bit;
   uint8_t rom_byte_mask, search_direction, status;
   bool id_bit, search_result;

   // initialize for search
   id_bit_number = 1;
   last_zero = 0;
   rom_byte_number = 0;
   rom_byte_mask = 1;
   search_result = false;
   crc8 = 0;

   // if the last call was not the last one
   if (!LastDeviceFlag)
   {  
      // 1-Wire reset
      if (!OWReset())
      {
         // reset the search
         LastDiscrepancy = 0;
         LastDeviceFlag = false;
         LastFamilyDiscrepancy = 0;
         return false;
      }

      // issue the search command
      OWWriteByte(0xF0);

      // loop to do the search
      do
      {
         // if this discrepancy if before the Last Discrepancy
         // on a previous next then pick the same as last time
         if (id_bit_number < LastDiscrepancy)
         {
            if ((ROM_NO[rom_byte_number] & rom_byte_mask) > 0)
               search_direction = 1;
            else
               search_direction = 0;
         }
         else
         {
            // if equal to last pick 1, if not then pick 0
            if (id_bit_number == LastDiscrepancy)
               search_direction = 1;
            else
               search_direction = 0;
         }

         // Perform a triple operation on the DS2482 which will perform
         // 2 read bits and 1 write bit
         status = DS2482_search_triplet(search_direction);

         // check bit results in status byte
         id_bit = ((status & (1<<ST_SBR)) == (1<<ST_SBR));
         cmp_id_bit = ((status & (1<<ST_TSB)) == (1<<ST_TSB));
         search_direction =
           ((status & (1<<ST_DIR)) == (1<<ST_DIR)) ? (uint8_t)1 : (uint8_t)0;

         // check for no devices on 1-Wire
         if ((id_bit) && (cmp_id_bit))
            break;
         else
         {
            if ((!id_bit) && (!cmp_id_bit) && (search_direction == 0))
            {
               last_zero = id_bit_number;

               // check for Last discrepancy in family
               if (last_zero < 9)
                  LastFamilyDiscrepancy = last_zero;
            }

            // set or clear the bit in the ROM byte rom_byte_number
            // with mask rom_byte_mask
            if (search_direction == 1)
               ROM_NO[rom_byte_number] |= rom_byte_mask;
            else
               ROM_NO[rom_byte_number] &= (uint8_t)~rom_byte_mask;

            // increment the byte counter id_bit_number
            // and shift the mask rom_byte_mask
            id_bit_number++;
            rom_byte_mask <<= 1;

            // if the mask is 0 then go to new SerialNum byte rom_byte_number
            // and reset mask
            if (rom_byte_mask == 0)
            {
               calc_crc8(ROM_NO[rom_byte_number]);  // accumulate the CRC
               rom_byte_number++;
               rom_byte_mask = 1;
            }
         }
      }
      while(rom_byte_number < 8);  // loop until through all ROM bytes 0-7
      // if the search was successful then
      if (!((id_bit_number < 65) || (crc8 != 0)))
      {
         // search successful so set LastDiscrepancy,LastDeviceFlag
         // search_result
         LastDiscrepancy = last_zero;

         // check for last device
         if (LastDiscrepancy == 0)
            LastDeviceFlag = true;

         search_result = true;
      }
   }
   // if no device found then reset counters so next
   // 'search' will be like a first

   if (!search_result || (ROM_NO[0] == 0))
   {
      LastDiscrepancy = 0;
      LastDeviceFlag = false;
      LastFamilyDiscrepancy = 0;
      search_result = false;
   }

   return search_result;
}
